# course_work_3

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/data/: data_manager.py
src/utils/: utils.py
tests/: test_operations.json
tests/func/: conftest.py  test_data_manager.py  test_file_summary.py  test_fixtures.py  test_print_result.py  test_sort_file.py
